--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1545,17 +1545,17 @@ pre code {
   padding: 0.3rem;
 }
 
-.table-bordered {
+.table-borders {
   border: 1px solid #dee2e6;
 }
 
-.table-bordered th,
-.table-bordered td {
+.table-borders th,
+.table-borders td {
   border: 1px solid #dee2e6;
 }
 
-.table-bordered thead th,
-.table-bordered thead td {
+.table-borders thead th,
+.table-borders thead td {
   border-bottom-width: 2px;
 }
 
@@ -1732,7 +1732,7 @@ pre code {
   border-color: #32383e;
 }
 
-.table-dark.table-bordered {
+.table-dark.table-borders {
   border: 0;
 }
 
@@ -1752,7 +1752,7 @@ pre code {
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar;
   }
-  .table-responsive-sm > .table-bordered {
+  .table-responsive-sm > .table-borders {
     border: 0;
   }
 }
@@ -1765,7 +1765,7 @@ pre code {
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar;
   }
-  .table-responsive-md > .table-bordered {
+  .table-responsive-md > .table-borders {
     border: 0;
   }
 }
@@ -1778,7 +1778,7 @@ pre code {
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar;
   }
-  .table-responsive-lg > .table-bordered {
+  .table-responsive-lg > .table-borders {
     border: 0;
   }
 }
@@ -1791,7 +1791,7 @@ pre code {
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar;
   }
-  .table-responsive-xl > .table-bordered {
+  .table-responsive-xl > .table-borders {
     border: 0;
   }
 }
@@ -1804,7 +1804,7 @@ pre code {
   -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
-.table-responsive > .table-bordered {
+.table-responsive > .table-borders {
   border: 0;
 }
 
@@ -9009,8 +9009,8 @@ a.text-dark:hover, a.text-dark:focus {
   .table th {
     background-color: #fff !important;
   }
-  .table-bordered th,
-  .table-bordered td {
+  .table-borders th,
+  .table-borders td {
     border: 1px solid #dee2e6 !important;
   }
   .table-dark {
